fixed aside scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -142,13 +142,17 @@ figure {
   background: white;
 }
 
+#colorlib-aside::-webkit-scrollbar{
+  width: 0;
+}
+
 #colorlib-aside {
   padding-top: 3em;
   padding-bottom: 40px;
   float: left;
   width: 300px;
   position: fixed;
-  overflow-y: hidden;
+  overflow-y: scroll;
   z-index: 1001;
   background: rgb(236, 233, 237);
   -webkit-transition: 0.5s;
